<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        android:fitsSystemWindows="true"
        android:orientation="vertical">

        <com.twenk11k.todolists.common.StatusBarView
            android:id="@+id/statusBarCustom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent" />

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_below="@id/statusBarCustom"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"></androidx.appcompat.widget.Toolbar>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/toolbar"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:background="@color/colorCoverArea">

            <Button
                android:id="@+id/btnRegister"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:background="@color/colorLoginButton"
                android:text="@string/register_title"
                android:textColor="@color/colorWhite" />

            <LinearLayout
                android:id="@+id/linear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:gravity="center_horizontal"
                    android:text="@string/create_an_account"
                    android:textColor="@color/colorWhite"
                    android:textSize="17sp"
                    android:textStyle="bold" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/ThemeOverlay.MaterialComponents.TextInputEditText.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_10sdp"
                        android:layout_marginTop="@dimen/_15sdp"
                        android:layout_marginRight="@dimen/_10sdp"
                        android:textColorHint="@color/colorGray"
                        app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/editTextName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/name"
                            android:maxLines="1"
                            android:singleLine="true"
                            android:textColor="@color/colorWhite" />

                    </com.google.android.material.textfield.TextInputLayout>
                </FrameLayout>


                <com.google.android.material.textfield.TextInputLayout
                    style="@style/ThemeOverlay.MaterialComponents.TextInputEditText.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:textColorHint="@color/colorGray"
                    app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextSurname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/surname"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textColor="@color/colorWhite" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/ThemeOverlay.MaterialComponents.TextInputEditText.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:textColorHint="@color/colorGray"
                    app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textColor="@color/colorWhite" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/ThemeOverlay.MaterialComponents.TextInputEditText.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:textColorHint="@color/colorGray"
                    app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/colorGray">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textColor="@color/colorWhite" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

        </RelativeLayout>
    </RelativeLayout>
</layout>